--- a/src/app/components/AgendarCita/agendar-cita.component.css
+++ b/src/app/components/AgendarCita/agendar-cita.component.css
@@ -80,3 +80,27 @@
 .resize-none {
   resize: none;
 }
+
+.input {
+  width: 100%;
+  padding: 0.5rem 1rem;
+  border: 1px solid #e5e7eb;
+  border-radius: 0.375rem;
+}
+
+.input:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(16, 185, 129, 0.5);
+}
+
+.btn {
+  padding: 0.5rem 1rem;
+  background-color: #1f2937;
+  color: white;
+  border-radius: 0.375rem;
+  transition: background-color 200ms;
+}
+
+.btn:hover {
+  background-color: #111827;
+}
